--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Snowman help</title>
+  <title>GLTF SWAPNIL</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 
 <body>
-  <!-- partial:index.partial.html -->
   <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/96/three.min.js'></script>
   <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/264161/OrbitControls.js'></script>
