--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
 
-  <script src='/three.min.js'></script>
-  <script src='/OrbitControls.js'></script>
-  <script src='/GLTFLoader.js'></script>
+  <script src='three.min.js'></script>
+  <script src='OrbitControls.js'></script>
+  <script src='GLTFLoader.js'></script>
   <!-- <script src="./script.js"></script> -->
 
   <!-- <button type="button" class="NextButton" onclick="animateNext()">Next Animation</button> -->
