--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div id="ternRender"></div>
 
   <script>
-    var mixer
+    var mixer;
     var action;
     var clock = new THREE.Clock();
     var scene = new THREE.Scene();
