--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       renderAnimation = (counter) => {
 
-        var action = mixer.clipAction(gltf.animations[counter]);   //getting single animation
+        action = mixer.clipAction(gltf.animations[counter]);   //getting single animation
         action.play();
 
 
